--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "nodemailer": "^6.4.6"
   }
 }
